# pulsepipe

./: .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-EXCEPTIONS.md  LICENSE.md  License  Makefile  NOTICE.md  README.md  README_WINDOWS_CI.md  ROADMAP.md  WHY.md  adapter.yaml  ingester.yaml  pipeline.yaml  pulsepipe.yaml  pyproject.toml  pytest.ini  test_model_creation.py
.github/workflows/: codeql.yml  pytest.yml
config/: clinical_chunker.yaml  clinical_embedding.yaml  deid.yaml  fhir_adapter.yaml  fhir_ingester.yaml  qdrant_vectorstore.yaml  weaviate_vectorstore.yaml
docs/: WHY_LOCAL_AI_FOR_HEALTHCARE.md  WHY_SAAS_WITH_PULSEPILOT.md  pulsepipe_data_pipeline.mmd  whitepaper.md  whitepaper_technical.md
scripts/: run_pipeline.py
test_data/: REAME.md
tests/: README_WINDOWS_TESTING.md  __init__.py  conftest.py  conftest.py.patch  mock_decorators.py  test_appointment_helper.py  test_appointment_model.py  test_audit_logger.py  test_audit_logging_integration.py  test_audit_logging_new_stages.py  test_audit_reporter.py  test_banner.py  test_bookmark_factory.py  test_cda_document_parser.py  test_cda_ingester.py  test_cda_mappers.py  test_chunking_stage.py  test_chunking_tracker.py  test_cli_config.py  test_cli_config_extended.py  test_cli_context.py  test_cli_formatters.py  test_cli_main.py  test_cli_metrics.py  test_cli_model.py  test_cli_model_extended.py  test_cli_run.py  test_clinical_chunker.py  test_concurrent_executor.py  test_config_loader.py  test_data_intelligence_config.py  test_database_connection_abc.py  test_database_diagnostics.py  test_database_factory.py  test_deid.py  test_deid_tracker.py  test_drg_model.py  test_embedder_clinical.py  test_embedder_operational.py  test_embedding_stage.py  (+82 more)
tests/config/: adapter.yaml  pipeline.yaml  pulsepipe.yaml
tests/fixtures/: Aldo_Wuckert_f68cef5d-f873-979e-963b-06d81b5200b6.json  Daron_Corkery_dc389de6-8d79-a516-ff50-8d731113578f.json  Gussie_Mitzie_Dickens_04acd7d4-5fb3-403b-feed-c3ff8aaaaa77.json  Jenice_Labadie_e52c1a05-2b2d-3341-0ce8-580c5ff17f5e.json  Kathyrn_Hessel_2cc870ad-6cb7-aae2-16b6-1deb8a5f55b9.json  Leif_Pfannerstill_46d1ad9b-7dbc-2692-6577-e5a065b5cbbe.json  May_Frank_Nicolas_2cd6b8b1-83a9-7444-d7bb-657182bb06c2.json  Raymonde_Bashirian_6c2ea93b-1526-3dd6-29bf-fdd01f065a94.json  Sara_Ana_María_Peralta_a9546050-a7c0-d45f-441b-971822efb680.json  sample_hl7_messages.hl7  simple_patient_bundle.json  simple_patient_bundle_array.json  test_uhc_835.txt  test_x12_278_receive.txt  (+1 more)
(+233 files in other folders)
