[tool.poetry]
name = "pulsepipe"
version = "25.04.05"
description = "Ingestion and Clinical Normalization Framework for Healthcare Data"
authors = ["Amir Abrams amirabrams@mail.com"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{ include = "pulsepipe", from = "src" }]

[tool.poetry.scripts]
pulsepipe = "pulsepipe.cli.main:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.5.3"
xmltodict = "^0.14.2"
pyyaml = "^6.0.2"
pytest-asyncio = "^0.26.0"
rich = "^14.0.0"
rich-click = "^1.8.8"
sentence-transformers = "^4.0.2"
torch = {version = "^2.6.0", extras = ["cuda11.8"]}
weaviate = "^0.1.2"
qdrant-client = "^1.13.3"
weaviate-client = "^4.13.2"
pytest-cov = "^6.1.1"
presidio-analyzer = "^2.2.358"
presidio-anonymizer = "^2.2.358"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.8"
black = "^24.3"
isort = "^5.13"
coverage = "^7.4"
types-python-dateutil = "^2.8"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
files = ["src/pulsepipe", "tests"]
strict = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
